@@ -14,6 +14,7 @@ Version 0.9.5
 - Fixed a problem with deepcopy not working for multi dicts.
 - Fixed a double quoting issue on redirects.
 - Fixed a problem with unicode keys appearing in headers on 2.x.
+- Fixed a bug with unicode strings in the test builder.
 
 Version 0.9.4
 -------------
